<resources>
    <string name="app_name">MoviesApp</string>
    <string name="no_internet_connection">No internet connection</string>


    // Label for the summary in DetailsActivity
    <string name="summary">Overview</string>

    // Label of the DetailsActivity layout
    <string name="mResultsList">Details</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>

    <!-- Strings For Sort-By Preference -->
    <string name="settings_sort_by_label">Sort By</string>
    <string name="settings_sort_by_key" translatable="false">sort_by</string>
    <string name="settings_sort_by_default" translatable="false">@string/settings_sort_by_highest_rated_value</string>

    <!-- Label for sort-by highest-rated option -->
    <string name="settings_sort_by_highest_rated_label">Highest rated</string>
    <string name="settings_sort_by_highest_rated_value" translatable="false">vote_count.desc</string>

    <!-- Label for sort-by popularity option -->
    <string name="settings_sort_by_popularity_label">Most popular</string>
    <string name="settings_sort_by_popularity_value" translatable="false">popularity.desc</string>

    <!-- Label for sort-by now_playing option -->
    <string name="settings_sort_by_now_playing_label">Now playing</string>
    <string name="settings_sort_by_now_playing_value" translatable="false">release_date.desc</string>

    <!-- For test only -->
    <string name="review_test">Whether a movie is a rotten tomato or a brilliant work of art, if people are watching it,
        its worth critiquing.A decent movie review should entertain, persuade and inform,
        providing an original opinion without giving away too much of the plot.
        A great movie review can be a work of art in its own right. Read on to learn how to analyze a movie,
        come up with an interesting thesis and write a review as entertaining as your source material.</string>


    <string name="favourite">Favourite</string>
    <string name="trailer_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="mikl">Mikl</string>
    <string name="error_fetch">Error fetching the data</string>
    <string name="_10">/ 10</string>
    <string name="status">Status</string>
    <string name="more_info">More Info</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="title">Popularity</string>
    <string name="language">Language</string>
    <string name="no_reviews_found">No reviews found yet.</string>
    <string name="no_trailers_found_yet">No trailers found yet.</string>
    <string name="view_details">Delete All</string>
    <string name="retry">Retry</string>
    <string name="comments">comments</string>
    <string name="trailers">trailers</string>
    <string name="one_trailer">trailer</string>
    <string name="one_comment">comment</string>
    <string name="nothing_to_show">Nothing to show…</string>
    <string name="get_started_">Get started by adding a movie.</string>
    <string name="movie_removed">Removed from Favourite list</string>
    <string name="movie_added">Added to Favourite list</string>
    <string name="see_list">SEE LIST</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="movie_poster">movie poster</string>
    <string name="delete_movie">Delete the movie</string>


</resources>