<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="16dp">


    <!-- Constraint layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:mContext=".activity.DetailsActivity">


        <!-- The poster -->
        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic[7]" />


        <!-- Trailer label -->
        <TextView
            android:id="@+id/tv_trailer_label"
            style="@style/Headers"
            android:layout_marginTop="16dp"
            android:text="@string/trailer_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <!-- Trailer RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailer"
            style="@style/RecyclerView"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailer_label" />


        <!-- Review label -->
        <TextView
            android:id="@+id/tv_reviews_label"
            style="@style/Headers"
            android:layout_marginTop="16dp"
            android:text="@string/reviews_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />


        <!-- Review RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            style="@style/RecyclerView"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />


        <!-- Release date icon -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            app:srcCompat="@drawable/baseline_date_range_white_18"
            tools:ignore="ContentDescription" />


        <!-- Release date value -->
        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/offWhite"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="22-5-2019" />


        <!-- Rating icon -->
        <ImageView
            android:id="@+id/iv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            app:srcCompat="@drawable/baseline_whatshot_white_18"
            tools:ignore="ContentDescription" />


        <!-- Rating value -->
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_rate"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="7.5" />


        <!-- All votes icon -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_rating"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            app:srcCompat="@drawable/baseline_perm_identity_white_18"
            tools:ignore="ContentDescription" />


        <!--  All votes value -->
        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/offWhite"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="20544" />


        <!-- Favourite tool -->
        <CheckBox
            android:id="@+id/cb_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/checkbox_state"
            android:button="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />


        <!-- Overview label -->
        <TextView
            android:id="@+id/tv_overview_label"
            style="@style/Headers"
            android:layout_marginTop="32dp"
            android:text="@string/summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />


        <!-- Overview Read More value-->
        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/offWhite"
            app:colorClickableText="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
            app:trimLength="150"
            app:trimMode="trimModeLength"
            tools:text="Interstellar chronicles the adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage." />


        <!-- Status label -->
        <TextView
            android:id="@+id/tv_label_status"
            style="@style/MoreInfoLabels"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_info" />


        <!-- Status value -->
        <TextView
            android:id="@+id/tv_status"
            style="@style/MoreInfoValues"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/tv_label_status"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_info"
            tools:text="Released" />


        <!-- Budget label -->
        <TextView
            android:id="@+id/tv_budget_label"
            style="@style/MoreInfoLabels"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/budget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_status" />


        <!-- Budget value -->
        <TextView
            android:id="@+id/tv_budget"
            style="@style/MoreInfoValues"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_status"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"
            tools:text="55000000$" />


        <!-- Revenue label -->
        <TextView
            android:id="@+id/tv_revenue_label"
            style="@style/MoreInfoLabels"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/revenue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_budget_label" />


        <!-- Revenue value -->
        <TextView
            android:id="@+id/tv_revenue"
            style="@style/MoreInfoValues"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_status"
            app:layout_constraintTop_toBottomOf="@+id/tv_budget"
            tools:text="285000452$" />


        <!-- Popularity label -->
        <TextView
            android:id="@+id/tv_popular_label"
            style="@style/MoreInfoLabels"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@+id/tv_popularity"
            app:layout_constraintTop_toBottomOf="  @+id/tv_label_info" />


        <!-- Popularity value -->
        <TextView
            android:id="@+id/tv_popularity"
            style="@style/MoreInfoValues"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_language_label"
            app:layout_constraintTop_toBottomOf="  @+id/tv_label_info"
            tools:text="45.000" />


        <!-- Language label -->
        <TextView
            android:id="@+id/tv_language_label"
            style="@style/MoreInfoLabels"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            app:layout_constraintStart_toStartOf="@+id/tv_popular_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_label" />


        <!-- Language value -->
        <TextView
            android:id="@+id/tv_language"
            style="@style/MoreInfoValues"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_popularity"
            tools:text="en" />


        <!-- More Info label -->
        <TextView
            android:id="@+id/tv_label_info"
            style="@style/Headers"
            android:layout_marginTop="16dp"
            android:text="@string/more_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />


        <!--  First view -->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_summary" />


        <!--  Second view -->
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailer" />


        <!-- Third view -->
        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_revenue_label" />


        <!-- No review (In case of null) -->
        <TextView
            android:id="@+id/tv_no_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/no_reviews_found"
            android:textColor="@color/offWhite"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />


        <!-- No trailers (In case of null) -->
        <TextView
            android:id="@+id/tv_no_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/no_trailers_found_yet"
            android:textColor="@color/offWhite"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <!-- Comments of reviews value -->
        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/offWhite"
            app:layout_constraintEnd_toStartOf="@+id/tv_label_comments"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            tools:text="8" />


        <!-- Comments of reviews label -->
        <TextView
            android:id="@+id/tv_label_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/comments"
            android:textColor="@color/offWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />


        <!-- Numbers of trailers label -->
        <TextView
            android:id="@+id/tv_sub_label_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/trailers"
            android:textColor="@color/offWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <!-- Numbers of trailers value -->
        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/offWhite"
            app:layout_constraintEnd_toStartOf="@+id/tv_sub_label_trailers"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:text="12" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>